--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ $mail->AltBody = $textversion;
         <div class="side-menu" id="side-menu">
             <div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png" alt=""></div>
             <div class="user">
-                <img src="images/creator/linkedin.jpg" alt="Chiru">
-                <p>Chiru_Vishnoi</p>
+                <img src="img/snap.jpeg" alt="Chiru">
+                <p>Huzaifa Fiaz</p>
             </div>
             <ul>
                 <li><a href="#about_section">About</a></li>
@@ -232,7 +232,7 @@ $mail->AltBody = $textversion;
                     <!--</div>-->
                 </div>
                 <div class="about__buttons">
-                    <a download="" href="/" class="button button--flex">Download CV<i
+                    <a download="" href="pdf/cv.pdf" class="button button--flex">Download CV<i
                             class="uil uil-file-download-alt button__icon"></i></a>
                 </div>
             </div>
