--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ $mail->AltBody = $textversion;
                     <div class="skills__list grid">
                         <div class="skills__data">
                             <div class="skills__titles">
-                                <h3 class="skills__name">Pro Level Kanjoos</h3>
+                                <h3 class="skills__name">OOP</h3>
                                 <span class="skills__number">99%</span>
                             </div>
                             <div class="skills__bar">
