--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ $mail->AltBody = $textversion;
 
                         <div class="skills__data">
                             <div class="skills__titles">
-                                <h3 class="skills__name">DSA</h3>
+                                <!-- <h3 class="skills__name">DSA</h3> -->
                                 <span class="skills__number">90%</span>
                             </div>
                             <div class="skills__bar">
