--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $mail->AltBody = $textversion;
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <!-- <script>
+    <script>
         $(window).on('scroll', function () {
             if ($(window).scrollTop()) {
                 $('nav').addClass('black');
@@ -82,7 +82,7 @@ $mail->AltBody = $textversion;
                 $('nav').removeClass('black');
             }
         })
-    </script> -->
+    </script>
 </head>
 
 <body>
