--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $mail->AltBody = $textversion;
 	}
 		if(isset($_POST['news'])){
 		$mail=($_POST['mail']);
-<!-- 		send_email_admin('subscribe', $mail, 'newsletter'); -->
+		send_email_admin('subscribe', $mail, 'newsletter');
 	}
 
 ?> -->
